# ShellClaw

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
docs/: architecture.md
policies/: default-policy.yaml  permissive-policy.yaml
src/shellclaw/: __init__.py  main.py
src/shellclaw/commands/: connect.py  migrate.py  onboard.py  start.py  status.py  stop.py
src/shellclaw/config/: paths.py  settings.py
src/shellclaw/core/: gateway.py  inference.py  policy.py  provider.py  sandbox.py  shell.py
src/shellclaw/utils/: console.py  validators.py
tests/: conftest.py
tests/integration/: test_cli_entrypoint.py  test_migrate.py  test_onboard.py  test_start_stop.py  test_status.py
tests/unit/: test_gateway.py  test_inference.py  test_policy.py  test_provider.py  test_sandbox.py  test_settings.py  test_shell.py  test_validators.py
